Fix text overflow issue for German

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -289,7 +289,6 @@
 
   &_dropdown {
     .dropdown-menu {
-      max-width: 100%;
       border-radius: 0;
       padding: 9px 0;
 
